--- a/pom.xml
+++ b/pom.xml
@@ -181,6 +181,12 @@
             <artifactId>javax.el</artifactId>
             <version>3.0.1-b08</version>
         </dependency>
+        <dependency>
+            <groupId>com.cjbdi</groupId>
+            <artifactId>cjbdi-ws-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
