--- a/pom.xml
+++ b/pom.xml
@@ -36,11 +36,6 @@
             <version>0.0.1</version>
         </dependency>
         <dependency>
-            <groupId>com.cjbdi</groupId>
-            <artifactId>cjbdi-ws-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
             <groupId>org.htmlparser</groupId>
             <artifactId>htmlparser</artifactId>
             <version>2.1</version>
@@ -173,7 +168,6 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>1.2.76</version>
-            <scope>compile</scope>
         </dependency>
 
         <dependency>
@@ -185,7 +179,6 @@
             <groupId>com.cjbdi</groupId>
             <artifactId>cjbdi-ws-common</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
 
     </dependencies>
@@ -220,10 +213,10 @@
                         <configuration>
                             <artifactSet>
                                 <excludes>
-<!--                                    <exclude>org.apache.flink:force-shading</exclude>-->
-<!--                                    <exclude>com.google.code.findbugs:jsr305</exclude>-->
-<!--                                    <exclude>org.slf4j:*</exclude>-->
-<!--                                    <exclude>org.apache.logging.log4j:*</exclude>-->
+                                    <exclude>org.apache.flink:force-shading</exclude>
+                                    <exclude>com.google.code.findbugs:jsr305</exclude>
+                                    <exclude>org.slf4j:*</exclude>
+                                    <exclude>org.apache.logging.log4j:*</exclude>
                                 </excludes>
                             </artifactSet>
                             <filters>
@@ -248,22 +241,6 @@
                 </executions>
             </plugin>
         </plugins>
-
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-            </resource>
-            <resource>
-                <directory>src/main/java</directory>
-            </resource>
-            <resource>
-                <directory>lib</directory>
-                <targetPath>BOOT-INF/lib/</targetPath>
-                <includes>
-                    <include>**/*.jar</include>
-                </includes>
-            </resource>
-        </resources>
     </build>
 
 </project>
