--- a/src/main/resources/parameter.properties
+++ b/src/main/resources/parameter.properties
@@ -1,11 +1,11 @@
 bootstrap-servers=rookiex01:9092
-input-group-id=00323
+bootstrap-servers2=rookiex01:9092
+input-group-id=003231
 input-topic=xx6
 json-error-topic=xx3
 analysis-error-topic=xx4
 toKafka-error-topic=xx5
 output-topic=xx2
-
 execution-time-flag=true
 execution-time-start=0
 execution-time-stop=7
